Ignore Sanity backend folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
     "skipLibCheck": true,
     "strict": true,
     "noEmit": true,
+    "allowSyntheticDefaultImports": true,
+  
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "bundler",
@@ -25,4 +27,5 @@
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/lib/firebase.js", "construction-site/schemaTypes/teamMembers.js"],
   "exclude": ["node_modules"]
+
 }
